
- Applied patch #2842678: Gutter selection problems (Shlomy Reinstein, patch
  provided by encorejane).

- Applied patch #2846169: IndentFoldHandler - allow blank lines after start of
  fold.	(Shlomy Reinstein, patch provided by Suraj Kurapati)

- Applied patch #2844750: line height correction (disappearing underscores),
  using OpenJDK (Suraj Kurapati)
}}}
{{{ Miscellaneous

- New Macro - "Text/Compose Tag". (Gordon Hollenbeck # 2644277)

- New action: toggle buffer switcher - toggles visibility of buffer switcher,
    and enabled-ness of focus menu item and focuses if enabled. (ezust)

- New (restored?) Actions: dumb "home" and "end": not as smart as smart
  home/end - stays on the same line always. (Alan Ezust)

- Smarter Smart-end - uses syntax info to determine end of code (before
  start of comment), giving smart-end 4 states instead of the previous 3.
  (Gordon Hollenbeck #2646484).

- New options to select the width and the background color of the selection area
  in the gutter (which is visible when line numbers are not shown).
}}}
{{{ API Changes

- Renamed "EditPane.showBufferSwitcher()" to "focusBufferSwitcher", and the
  corresponding action that invokes it. (Alan Ezust)

- New method: TextArea.goToEndOfCode() (Gordon Hollenbeck #2646484).

- Removed deprecated TextAreaUpdate EBMessage. Use EditPaneUpdate instead.
    (Alan Ezust)

- Moved EditorExiting ebmessage earlier, before the unloading of plugin jars
  so plugins can catch it and act appropriately during shutdown. (Alan Ezust)

- Added support for undo-aware plugins:
    - A new interface: org.gjt.sp.jedit.buffer.BufferUndoListener
      This interface defines a listener that gets notified whenever undo/redo
      are performed on a buffer. The listener can be added to / removed from
      a buffer using:
      JEditBuffer.addBufferUndoListener(BufferUndoListener)
      JEditBuffer.removeBufferUndoListener(BufferUndoListener listener)